@@ -2,6 +2,7 @@ freebsd-glue (0.1.4) UNRELEASED; urgency=low
 
   * Implement srandomdev().
   * Implement getdiskbyname().
+  * Add <timeconv.h> stubs.
 
  -- Robert Millan <rmh@debian.org>  Mon, 02 Sep 2013 16:49:24 +0200
 
